adding new solutions

--- a/Course/Unit Testing/EX 05. Shared Object.html
+++ b/Course/Unit Testing/EX 05. Shared Object.html
@@ -14,18 +14,18 @@
 <div id="wrapper">
     <input type="text" id="name">
     <input type="text" id="income">
-    <button id="btn">Action</button>
+    <!--<button id="btn">Action</button>-->
 </div>
-<script>
-    document.getElementById("btn").addEventListener("click", function () {
+<!--<script>-->
+    <!--document.getElementById("btn").addEventListener("click", function () {-->
 
-        sharedObject.updateIncome();
-        sharedObject.updateName();
+        <!--sharedObject.updateIncome();-->
+        <!--sharedObject.updateName();-->
 
-        console.log(sharedObject.name);
-        console.log(sharedObject.income);
+        <!--console.log(sharedObject.name);-->
+        <!--console.log(sharedObject.income);-->
 
-    });
-</script>
+    <!--});-->
+<!--</script>-->
 </body>
 </html>
