--- a/Course/jQuery/01. Text from List.html
+++ b/Course/jQuery/01. Text from List.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Text from List</title>
 
-    <script src="../../jquery-3.3.1.min.js">
+    <script src="../jquery-3.3.1.min.js">
         integrity = "sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=";
         crossorigin = "anonymous"
     </script>
