--- a/Course/Exam 23.07.17/04. Contacts.html
+++ b/Course/Exam 23.07.17/04. Contacts.html
@@ -12,6 +12,7 @@
         .online { background: #9E9; }
     </style>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <!--така зарежда скрипта последен с defer -->
     <script defer src="04. Contacts.js"></script>
 
 </head>
