--- a/Course/Retake Exam - 5 Sept 2017/04. Dialog.html
+++ b/Course/Retake Exam - 5 Sept 2017/04. Dialog.html
@@ -49,6 +49,7 @@
         };
         let dialog = new Dialog("Dialog, containing message text and input field.", callback);
         dialog.addInput('Name', 'name', 'text');
+        dialog.addInput('Age', 'age', 'number');
         dialog.render();
     }
 
