--- a/Course/Exam 07.11.2016 Sample/04. Table Builder.html
+++ b/Course/Exam 07.11.2016 Sample/04. Table Builder.html
@@ -18,19 +18,19 @@
 </script>
 <script>
     $(function () {
-        // let builder = tableBuilder("#main");
+        let builder = tableBuilder("#main");
 
-        let builder = result('div');
+        // let builder = result('div');
 
         builder.createTable(['Just', 'A', 'Test']);
 
-        // builder.createTable(['Name', 'Town']);
-        //
-        // builder.fillData([
-        //     ['Maria', 'Sofia'],
-        //     ['Kiril', 'Varna'],
-        //     ['Ani <new>', 'Ruse'],
-        // ]);
+        builder.createTable(['Name', 'Town']);
+
+        builder.fillData([
+            ['Maria', 'Sofia'],
+            ['Kiril', 'Varna'],
+            ['Ani <new>', 'Ruse'],
+        ]);
     });
 </script>
 
