--- a/Course/myExam 26.04.18 Retake/index.html
+++ b/Course/myExam 26.04.18 Retake/index.html
@@ -33,7 +33,7 @@
 <script src="./solution.js"></script>
 <script>
     $(function() {
-        let publicTransportTable = new PublicTransportTable('Sofia')
+        let publicTransportTable = new PublicTransportTable('Sofia');
 
         let vehiclesDataArr = [
             { type: 'bus', name: '84', route: 'Sofia airport - Gen. Gurko str.', price: 1.60, driver: 'Pesho' },
@@ -41,12 +41,12 @@
             { type: 'bus', name: '280', route: 'Student city - SU Kliment Ohridsky', price: 4.20, driver: 'Gosho' },
             { type: 'trolleybus', name: '11', route:' Drujba 1 - Stochna station sq.', price: 2.60, driver: 'Tosho' },
             { type: 'metro', name: 'M1', route:'Slivnica - Business Park', price: 3.50,
-                driver: 'Petq' },
+                driver: 'Pena' },
             { type: 'bus', name: '404', route: 'AP Drujba - Central station', price: 1.60,
-                driver: 'Silviq' },
+                driver: 'Silvia' },
             { type: 'metro', name: 'M2', route:'Sofia airport - James Bourchier', price: 5.99, driver: 'Krum' },
             // You can add/remove any vehicles data objects here
-        ]
+        ];
 
         for (let vehicleObj of vehiclesDataArr) {
             publicTransportTable.addVehicle(vehicleObj)
